# dist_metis

./: .gitignore  .gitmodules  CMakeLists.txt  script.py
include/: partition.h
src/: api.cc  partition.cc  read_num_nodes.cc
